--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Module-Extract-Namespaces
-version:             0.11_01
+version:             0.12
 abstract:            This is what the module does
 license:             perl
 author:              
