--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,26 @@
 --- #YAML:1.0
-name:                Module-Extract-Namespaces
-version:             0.14
-abstract:            This is what the module does
-license:             perl
-author:              
+name:               Module-Extract-Namespaces
+version:            0.14_01
+abstract:           This is what the module does
+author:
     - brian d foy <bdfoy@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    PPI:                           0
-    Test::More:                    0
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    PPI:         0
+    Test::More:  0
+no_index:
+    directory:
+        - t
+        - inc
+        - inc
+        - t
+        - corpus
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
